    - Added startup settings "Reskin entities", "Reskin equipment", "Reskin items and fluids" and "Reskin technologies" to control the scope of the various mod reskin toggles; by default the complete scope is enabled
    - Added function `check_scope` to check the enabled scope and the given toggle setting and return the appropriate boolean or nil
  Changes:
    - Revised tint handling, separated transport belt tints into their own table, `reskins.lib.belt_tint_index`
    - Revised how tints are indexed, allowing for direct reference by tier-number instead of a string
    - Revised transport belt mask sprites to improve mask precision and color
    - Consolidated settings-stage functions into `reskins.lib` global function host
    - Internal code revisions such that reskinning is trigger-based
  Bugfixes:
    - Fixed that the concatenation routine to append the defaults for boolean settings did not handle LocalisedStrings properly
  Locale:
    - Added partial localization for Polish
---------------------------------------------------------------------------------------------------
Version: 1.1.2
Date: 2021.01.31
  Locale:
    - Added Russian localization
---------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: 2020.12.25
  Features:
    - Added function `vertical_pipe_shadow` to place shadows at appropriate tile locations for pipes
    - Added item icon for solder and silicon wafer, credit to Vigil for the sprites
    - Added function `technology_equipment_overlay` for technology icons
    - Now requires Factorio Library as a dependency
  Changes:
    - Adjusted the default color blue for tier 3 to better match the vanilla fast inserter
    - Revised function `create_explosions_and_particles' such that `inputs.particles` is optional
    - Equipment technology icons now align with Bob's mods and vanilla Factorio's overlay
  Bugfixes: