@@ -54,17 +54,59 @@ reskins-lib-icon-tier-labeling-style-rounded-rectangle=[img=reskins-lib-rounded-
 reskins-lib-icon-tier-labeling-style-teardrop=[img=reskins-lib-teardrop-tier-label]Teardrops
 
 [reskins-library]
+reskins-suite-name=Artisanal Reskins
 reskins-bobs-mod-name=Artisanal Reskins: Bob's Mods
 reskins-angels-mod-name=Artisanal Reskins: Angel's Mods
 reskins-compatibility-mod-name=Artisanal Reskins: Compatibility
 
 [reskins-updates]
 reskins-lib-1-0-4-update=New customization option "__1__" available in mod Startup settings.
+reskins-lib-1-1-3-update=Support for mod compatibility with Circuit Processing, Miniloaders, Deadlock's Stacking Beltboxes & Loaders, Loader Redux, Mini Machines and other mods has moved into __1__.
 
 [reskins-notifications]
-reskins-notify-missing=You are playing with __1__, and have __2__ mods installed. Consider downloading __3__ as well.
-reskins-notify-compatibility=Support for mod compatibility with Circuit Processing, Deadlock's Stacking Beltboxes and Loaders, Loader Redux, Mini Machines and other mods has moved into __1__.
+reskins-notify-missing-single=__1__ will be reskinned if you install __2__.
+reskins-notify-missing-multiple=__1__ and __2__ __plural_for_parameter_2_{1=other active mod|rest=other active mods}__ will be reskinned if you install __3__.
 
 [reskins-defaults]
 true=\n\n[color=#9cdcfe]Default[/color]: [color=green]Enabled[/color]
 false=\n\n[color=#9cdcfe]Default:[/color] [color=red]Disabled[/color]
+
+[reskins-supported-mods]
+angelsbioprocessing=Angel's Bioprocessing
+angelsexploration=Angel's Exploration (BETA)
+angelsindustries=Angel's Industries
+angelspetrochem=Angel's Petrochemical Processing
+angelsrefining=Angel's Refining
+angelssmelting=Angel's Smelting
+angelsaddons-cab=Angel's Addons - C.A.B.
+angelsaddons-mobility=Angel's Addons - Mass Transit
+angelsaddons-storage=Angel's Addons - Storage Options
+
+bobassembly=Bob's Assembling machines mod
+bobclasses=Bob's Classes and Multiple characters mod
+bobelectronics=Bob's Electronics mod
+bobenemies=Bob's Enemies mod
+bobequipment=Bob's Personal Equipment mod
+bobgreenhouse=Bob's Greenhouse mod
+bobinserters=Bob's Adjustable Inserters mod
+boblogistics=Bob's Logistics mod
+bobmining=Bob's Mining mod
+bobmodules=Bob's Modules mod
+bobores=Bob's Ores mod
+bobplates=Bob's Metals, Chemicals and Intermediates mod
+bobpower=Bob's Power mod
+bobrevamp=Bob's Revamp mod
+bobtech=Bob's Technology mod
+bobvehicleequipment=Bob's Vehicle Equipment mod
+bobwarfare=Bob's Warfare mod
+
+CircuitProcessing=Circuit Processing
+classic-beacon=Classic Beacon
+classic-mining-drill=Classic Mining Drill
+deadlock-beltboxes-loaders=Deadlock's Stacking Beltboxes & Compact Loaders
+DeadlockCrating=Deadlock's Crating Machine
+LoaderRedux=Loader Redux
+mini-machines=Mini Machines Mod
+miniloader=Miniloader
+semi-classic-mining-drill=Semi-Classic Mining Drill
+vanilla-loaders-hd=Vanilla Loaders
