@@ -1,0 +1,2 @@
+-- Perform on_init routines for existing saves
+on_init()
