@@ -44,14 +44,14 @@ data:extend(
         type = "bool-setting",
         name = "reskins-lib-icon-tier-labeling",
         setting_type = "startup",
-        order = "a",
+        order = "c",
         default_value = true,
     },
     {
         type = "string-setting",
         name = "reskins-lib-tier-mapping",
         setting_type = "startup",
-        order = "ab",
+        order = "cb",
         default_value = "progression-map",
         allowed_values = {"progression-map","traditional-map"}
     },
@@ -59,7 +59,7 @@ data:extend(
         type = "string-setting",
         name = "reskins-lib-icon-tier-labeling-style",
         setting_type = "startup",
-        order = "aa",
+        order = "ca",
         default_value = "rounded-rectangle",
         allowed_values = {"dots","half-circle","rectangle","rounded-half-circle","rounded-rectangle","teardrop"}
     },
@@ -67,7 +67,7 @@ data:extend(
         type = "string-setting",
         name = "reskins-lib-blend-mode",
         setting_type = "startup",
-        order = "b",
+        order = "d",
         default_value = "additive",
         allowed_values = {"additive","additive-soft"}
     },
@@ -77,28 +77,28 @@ data:extend(
         type = "bool-setting",
         name = "reskins-lib-scope-entities",
         setting_type = "startup",
-        order = "da",
+        order = "aa",
         default_value = true,
     },
     {
         type = "bool-setting",
         name = "reskins-lib-scope-equipment",
         setting_type = "startup",
-        order = "db",
+        order = "ab",
         default_value = true,
     },
     {
         type = "bool-setting",
         name = "reskins-lib-scope-items-and-fluids",
         setting_type = "startup",
-        order = "dc",
+        order = "ac",
         default_value = true,
     },
     {
         type = "bool-setting",
         name = "reskins-lib-scope-technologies",
         setting_type = "startup",
-        order = "dd",
+        order = "ad",
         default_value = true,
     },
 })
